@startuml
title Startup-Cashflow-Survival - Zustandsdiagramm
hide empty description

[*] --> AppStart
state AppStart : HTML geladen: _ghtml_startup_cashflow_survival.html
AppStart --> Initialisierung : Script(s) laden
Initialisierung --> DatenLaden : fetch Konfiguration/Leveldaten
DatenLaden --> Bereit : Daten erfolgreich geladen
DatenLaden --> Fehler : Laden fehlgeschlagen
Bereit --> Spielzyklus : Erste Runde starten

state Spielzyklus {
  [*] --> WarteAufEingabe
  WarteAufEingabe --> Auswertung : Nutzerinteraktion
  Auswertung --> Feedback : Regeln pruefen
  Feedback --> FortschrittPruefen : Weiter / Auto-Fortschritt
  FortschrittPruefen --> WarteAufEingabe : Weitere Aufgabe offen
  FortschrittPruefen --> Abschluss : Letzte Aufgabe erledigt
}

Abschluss --> Neustart : Neustart ausloesen
Neustart --> Initialisierung : State zuruecksetzen
Abschluss --> [*] : Sitzung verlassen
Fehler --> [*]

note right of Initialisierung
Quelle: databases/Teil01 Grundlagen/database/BWL/Auswahl & Bewertung/Leasing/startup_cashflow_survival/_ghtml_startup_cashflow_survival.html
JS: _gjs_startup_cashflow_survival.js
fetch: _data/_gg01_startup_cashflow_survival.json
Merkmale: neustart, fehlerbehandlung
end note
@enduml
